k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocrpipeline-api
  namespace: ocrpipeline
spec:
  type: ClusterIP
  selector:
    app: ocrpipeline-api
  ports:
    - port: 80
      targetPort: 8000
